--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,15 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proyectando Backend</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <main class="flex flex-col items-center bg-cyan-500 p-4">
-        <h1 class="font-mono font-extrabold text-5xl ">Historial de Productos Agregados</h1>
     {{{body}}}
-    <button class="focus:outline-none text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900" ><a href="./index.html">Volver al Home</a></button>
-    </main>
-    </body>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/scripts/script.js"></script>
+</body>
 </html>
 
